5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4124/executions/1674_1107.log
== TEST (2019-04-30 10:33:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("Numero do dia de hoje: "))
y = int(input("Numero de dias depois de hoje: "))
z = (x + y) % 7
if(x < 0 or x > 6):
	print("A entrada", x, "eh invalida")
elif(x == 0):
	b = "domingo"
	if(z == 0):
		a = "domingo"
	elif(z == 1):
		a = "segunda"
	elif(z == 2):
		a = "terca"
	elif(z == 3):
		a = "quarta"
	elif(z == 4):
		a = "quinta"
	elif(z == 5):
		a = "sexta"
	elif(z == 6):
		a = "sabado"
elif(x == 1):
	b = "segunda"
	if(z == 0):
		a = "segunda"
	elif(z == 1):
		a = "terca"
	elif(z == 2):
		a = "quarta"
	elif(z == 3):
		a = "quinta"
	elif(z == 4):
		a = "sexta"
	elif(z == 5):
		a = "sabado"
	elif(z == 6):
		a = "domingo"
elif(x == 2):
	b = "terca"
	if(z == 0):
		a = "terca"
	elif(z == 1):
		a = "quarta"
	elif(z == 2):
		a = "quinta"
	elif(z == 3):
		a = "sexta"
	elif(z == 4):
		a = "sabado"
	elif(z == 5):
		a = "domingo"
	elif(z == 6):
		a = "segunda"
elif(x == 3):
	b = "quarta"
	if(z == 0):
		a = "quarta"
	elif(z == 1):
		a = "quinta"
	elif(z == 2):
		a = "sexta"
	elif(z == 3):
		a = "sabado"
	elif(z == 4):
		a = "domingo"
	elif(z == 5):
		a = "segunda"
	elif(z == 6):
		a = "terca"
elif(x == 4):
	a = "quinta"
	if(z == 0):
		a = "quinta"
	elif(z == 1):
		a = "sexta"
	elif(z == 2):
		a = "sabado"
	elif(z == 3):
		a = "domingo"
	elif(z == 4):
		a = "segunda"
	elif(z == 5):
		a = "terca"
	elif(z == 6):
		a = "quarta"
elif(x == 5):
	a = "sexta"
	if(z == 0):
		a = "sexta"
	elif(z == 1):
		a = "sabado"
	elif(z == 2):
		a = "domingo"
	elif(z == 3):
		a = "segunda"
	elif(z == 4):
		a = "terca"
	elif(z == 5):
		a = "quarta"
	elif(z == 6):
		a = "quinta"
elif(x == 6):
	a = "sabado"
	if(z == 0):
		a = "sabado"
	elif(z == 1):
		a = "domingo"
	elif(z == 2):
		a = "segunda"
	elif(z == 3):
		a = "terca"
	elif(z == 4):
		a = "quarta"
	elif(z == 5):
		a = "quinta"
	elif(z == 6):
		a = "sexta"
	print("Hoje eh", b, "e o dia futuro eh", a,)
	

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:33:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("Numero do dia de hoje: "))
y = int(input("Numero de dias depois de hoje: "))
z = (x + y) % 7
if(x < 0 or x > 6):
	print("A entrada", x, "eh invalida")
elif(x == 0):
	b = "domingo"
	if(z == 0):
		a = "domingo"
	elif(z == 1):
		a = "segunda"
	elif(z == 2):
		a = "terca"
	elif(z == 3):
		a = "quarta"
	elif(z == 4):
		a = "quinta"
	elif(z == 5):
		a = "sexta"
	elif(z == 6):
		a = "sabado"
elif(x == 1):
	b = "segunda"
	if(z == 0):
		a = "segunda"
	elif(z == 1):
		a = "terca"
	elif(z == 2):
		a = "quarta"
	elif(z == 3):
		a = "quinta"
	elif(z == 4):
		a = "sexta"
	elif(z == 5):
		a = "sabado"
	elif(z == 6):
		a = "domingo"
elif(x == 2):
	b = "terca"
	if(z == 0):
		a = "terca"
	elif(z == 1):
		a = "quarta"
	elif(z == 2):
		a = "quinta"
	elif(z == 3):
		a = "sexta"
	elif(z == 4):
		a = "sabado"
	elif(z == 5):
		a = "domingo"
	elif(z == 6):
		a = "segunda"
elif(x == 3):
	b = "quarta"
	if(z == 0):
		a = "quarta"
	elif(z == 1):
		a = "quinta"
	elif(z == 2):
		a = "sexta"
	elif(z == 3):
		a = "sabado"
	elif(z == 4):
		a = "domingo"
	elif(z == 5):
		a = "segunda"
	elif(z == 6):
		a = "terca"
elif(x == 4):
	a = "quinta"
	if(z == 0):
		a = "quinta"
	elif(z == 1):
		a = "sexta"
	elif(z == 2):
		a = "sabado"
	elif(z == 3):
		a = "domingo"
	elif(z == 4):
		a = "segunda"
	elif(z == 5):
		a = "terca"
	elif(z == 6):
		a = "quarta"
elif(x == 5):
	a = "sexta"
	if(z == 0):
		a = "sexta"
	elif(z == 1):
		a = "sabado"
	elif(z == 2):
		a = "domingo"
	elif(z == 3):
		a = "segunda"
	elif(z == 4):
		a = "terca"
	elif(z == 5):
		a = "quarta"
	elif(z == 6):
		a = "quinta"
elif(x == 6):
	a = "sabado"
	if(z == 0):
		a = "sabado"
	elif(z == 1):
		a = "domingo"
	elif(z == 2):
		a = "segunda"
	elif(z == 3):
		a = "terca"
	elif(z == 4):
		a = "quarta"
	elif(z == 5):
		a = "quinta"
	elif(z == 6):
		a = "sexta"
print("Hoje eh", b, "e o dia futuro eh", a,)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 121, in <module>
    print("Hoje eh", b, "e o dia futuro eh", a,)
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:35:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("Numero do dia de hoje: "))
y = int(input("Numero de dias depois de hoje: "))
z = (x + y) % 6
if(x < 0 or x > 6):
	print("A entrada", x, "eh invalida")
elif(x == 0):
	b = "domingo"
	if(z == 0):
		a = "domingo"
	elif(z == 1):
		a = "segunda"
	elif(z == 2):
		a = "terca"
	elif(z == 3):
		a = "quarta"
	elif(z == 4):
		a = "quinta"
	elif(z == 5):
		a = "sexta"
	elif(z == 6):
		a = "sabado"
elif(x == 1):
	b = "segunda"
	if(z == 0):
		a = "segunda"
	elif(z == 1):
		a = "terca"
	elif(z == 2):
		a = "quarta"
	elif(z == 3):
		a = "quinta"
	elif(z == 4):
		a = "sexta"
	elif(z == 5):
		a = "sabado"
	elif(z == 6):
		a = "domingo"
elif(x == 2):
	b = "terca"
	if(z == 0):
		a = "terca"
	elif(z == 1):
		a = "quarta"
	elif(z == 2):
		a = "quinta"
	elif(z == 3):
		a = "sexta"
	elif(z == 4):
		a = "sabado"
	elif(z == 5):
		a = "domingo"
	elif(z == 6):
		a = "segunda"
elif(x == 3):
	b = "quarta"
	if(z == 0):
		a = "quarta"
	elif(z == 1):
		a = "quinta"
	elif(z == 2):
		a = "sexta"
	elif(z == 3):
		a = "sabado"
	elif(z == 4):
		a = "domingo"
	elif(z == 5):
		a = "segunda"
	elif(z == 6):
		a = "terca"
elif(x == 4):
	a = "quinta"
	if(z == 0):
		a = "quinta"
	elif(z == 1):
		a = "sexta"
	elif(z == 2):
		a = "sabado"
	elif(z == 3):
		a = "domingo"
	elif(z == 4):
		a = "segunda"
	elif(z == 5):
		a = "terca"
	elif(z == 6):
		a = "quarta"
elif(x == 5):
	a = "sexta"
	if(z == 0):
		a = "sexta"
	elif(z == 1):
		a = "sabado"
	elif(z == 2):
		a = "domingo"
	elif(z == 3):
		a = "segunda"
	elif(z == 4):
		a = "terca"
	elif(z == 5):
		a = "quarta"
	elif(z == 6):
		a = "quinta"
elif(x == 6):
	a = "sabado"
	if(z == 0):
		a = "sabado"
	elif(z == 1):
		a = "domingo"
	elif(z == 2):
		a = "segunda"
	elif(z == 3):
		a = "terca"
	elif(z == 4):
		a = "quarta"
	elif(z == 5):
		a = "quinta"
	elif(z == 6):
		a = "sexta"
print("Hoje eh", b, "e o dia futuro eh", a,)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 121, in <module>
    print("Hoje eh", b, "e o dia futuro eh", a,)
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:40:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("Numero do dia de hoje: "))
y = int(input("Numero de dias depois de hoje: "))
z = (x + y) % 6

if(x == 0):
	b = "domingo"
	if(z == 0):
		a = "domingo"
	elif(z == 1):
		a = "segunda"
	elif(z == 2):
		a = "terca"
	elif(z == 3):
		a = "quarta"
	elif(z == 4):
		a = "quinta"
	elif(z == 5):
		a = "sexta"
	elif(z == 6):
		a = "sabado"
elif(x == 1):
	b = "segunda"
	if(z == 0):
		a = "segunda"
	elif(z == 1):
		a = "terca"
	elif(z == 2):
		a = "quarta"
	elif(z == 3):
		a = "quinta"
	elif(z == 4):
		a = "sexta"
	elif(z == 5):
		a = "sabado"
	elif(z == 6):
		a = "domingo"
elif(x == 2):
	b = "terca"
	if(z == 0):
		a = "terca"
	elif(z == 1):
		a = "quarta"
	elif(z == 2):
		a = "quinta"
	elif(z == 3):
		a = "sexta"
	elif(z == 4):
		a = "sabado"
	elif(z == 5):
		a = "domingo"
	elif(z == 6):
		a = "segunda"
elif(x == 3):
	b = "quarta"
	if(z == 0):
		a = "quarta"
	elif(z == 1):
		a = "quinta"
	elif(z == 2):
		a = "sexta"
	elif(z == 3):
		a = "sabado"
	elif(z == 4):
		a = "domingo"
	elif(z == 5):
		a = "segunda"
	elif(z == 6):
		a = "terca"
elif(x == 4):
	a = "quinta"
	if(z == 0):
		a = "quinta"
	elif(z == 1):
		a = "sexta"
	elif(z == 2):
		a = "sabado"
	elif(z == 3):
		a = "domingo"
	elif(z == 4):
		a = "segunda"
	elif(z == 5):
		a = "terca"
	elif(z == 6):
		a = "quarta"
elif(x == 5):
	a = "sexta"
	if(z == 0):
		a = "sexta"
	elif(z == 1):
		a = "sabado"
	elif(z == 2):
		a = "domingo"
	elif(z == 3):
		a = "segunda"
	elif(z == 4):
		a = "terca"
	elif(z == 5):
		a = "quarta"
	elif(z == 6):
		a = "quinta"
elif(x == 6):
	a = "sabado"
	if(z == 0):
		a = "sabado"
	elif(z == 1):
		a = "domingo"
	elif(z == 2):
		a = "segunda"
	elif(z == 3):
		a = "terca"
	elif(z == 4):
		a = "quarta"
	elif(z == 5):
		a = "quinta"
	elif(z == 6):
		a = "sexta"
	print("Hoje eh", b, "e o dia futuro eh", a,)
else:
	print("A entrada", x, "eh invalida")
	

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:41:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("Numero do dia de hoje: "))
y = int(input("Numero de dias depois de hoje: "))
z = (x + y) % 7

if(x == 0):
	b = "domingo"
	if(z == 0):
		a = "domingo"
	elif(z == 1):
		a = "segunda"
	elif(z == 2):
		a = "terca"
	elif(z == 3):
		a = "quarta"
	elif(z == 4):
		a = "quinta"
	elif(z == 5):
		a = "sexta"
	elif(z == 6):
		a = "sabado"
elif(x == 1):
	b = "segunda"
	if(z == 0):
		a = "segunda"
	elif(z == 1):
		a = "terca"
	elif(z == 2):
		a = "quarta"
	elif(z == 3):
		a = "quinta"
	elif(z == 4):
		a = "sexta"
	elif(z == 5):
		a = "sabado"
	elif(z == 6):
		a = "domingo"
elif(x == 2):
	b = "terca"
	if(z == 0):
		a = "terca"
	elif(z == 1):
		a = "quarta"
	elif(z == 2):
		a = "quinta"
	elif(z == 3):
		a = "sexta"
	elif(z == 4):
		a = "sabado"
	elif(z == 5):
		a = "domingo"
	elif(z == 6):
		a = "segunda"
elif(x == 3):
	b = "quarta"
	if(z == 0):
		a = "quarta"
	elif(z == 1):
		a = "quinta"
	elif(z == 2):
		a = "sexta"
	elif(z == 3):
		a = "sabado"
	elif(z == 4):
		a = "domingo"
	elif(z == 5):
		a = "segunda"
	elif(z == 6):
		a = "terca"
elif(x == 4):
	a = "quinta"
	if(z == 0):
		a = "quinta"
	elif(z == 1):
		a = "sexta"
	elif(z == 2):
		a = "sabado"
	elif(z == 3):
		a = "domingo"
	elif(z == 4):
		a = "segunda"
	elif(z == 5):
		a = "terca"
	elif(z == 6):
		a = "quarta"
elif(x == 5):
	a = "sexta"
	if(z == 0):
		a = "sexta"
	elif(z == 1):
		a = "sabado"
	elif(z == 2):
		a = "domingo"
	elif(z == 3):
		a = "segunda"
	elif(z == 4):
		a = "terca"
	elif(z == 5):
		a = "quarta"
	elif(z == 6):
		a = "quinta"
elif(x == 6):
	a = "sabado"
	if(z == 0):
		a = "sabado"
	elif(z == 1):
		a = "domingo"
	elif(z == 2):
		a = "segunda"
	elif(z == 3):
		a = "terca"
	elif(z == 4):
		a = "quarta"
	elif(z == 5):
		a = "quinta"
	elif(z == 6):
		a = "sexta"
print("Hoje eh", b, "e o dia futuro eh", a,)
else:
print("A entrada", x, "eh invalida")
	

-- ERROR:
File "XXXX", line 121
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:41:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("Numero do dia de hoje: "))
y = int(input("Numero de dias depois de hoje: "))
z = (x + y) % 7

if(x == 0):
	b = "domingo"
	if(z == 0):
		a = "domingo"
	elif(z == 1):
		a = "segunda"
	elif(z == 2):
		a = "terca"
	elif(z == 3):
		a = "quarta"
	elif(z == 4):
		a = "quinta"
	elif(z == 5):
		a = "sexta"
	elif(z == 6):
		a = "sabado"
elif(x == 1):
	b = "segunda"
	if(z == 0):
		a = "segunda"
	elif(z == 1):
		a = "terca"
	elif(z == 2):
		a = "quarta"
	elif(z == 3):
		a = "quinta"
	elif(z == 4):
		a = "sexta"
	elif(z == 5):
		a = "sabado"
	elif(z == 6):
		a = "domingo"
elif(x == 2):
	b = "terca"
	if(z == 0):
		a = "terca"
	elif(z == 1):
		a = "quarta"
	elif(z == 2):
		a = "quinta"
	elif(z == 3):
		a = "sexta"
	elif(z == 4):
		a = "sabado"
	elif(z == 5):
		a = "domingo"
	elif(z == 6):
		a = "segunda"
elif(x == 3):
	b = "quarta"
	if(z == 0):
		a = "quarta"
	elif(z == 1):
		a = "quinta"
	elif(z == 2):
		a = "sexta"
	elif(z == 3):
		a = "sabado"
	elif(z == 4):
		a = "domingo"
	elif(z == 5):
		a = "segunda"
	elif(z == 6):
		a = "terca"
elif(x == 4):
	a = "quinta"
	if(z == 0):
		a = "quinta"
	elif(z == 1):
		a = "sexta"
	elif(z == 2):
		a = "sabado"
	elif(z == 3):
		a = "domingo"
	elif(z == 4):
		a = "segunda"
	elif(z == 5):
		a = "terca"
	elif(z == 6):
		a = "quarta"
elif(x == 5):
	a = "sexta"
	if(z == 0):
		a = "sexta"
	elif(z == 1):
		a = "sabado"
	elif(z == 2):
		a = "domingo"
	elif(z == 3):
		a = "segunda"
	elif(z == 4):
		a = "terca"
	elif(z == 5):
		a = "quarta"
	elif(z == 6):
		a = "quinta"
elif(x == 6):
	a = "sabado"
	if(z == 0):
		a = "sabado"
	elif(z == 1):
		a = "domingo"
	elif(z == 2):
		a = "segunda"
	elif(z == 3):
		a = "terca"
	elif(z == 4):
		a = "quarta"
	elif(z == 5):
		a = "quinta"
	elif(z == 6):
		a = "sexta"
	print("Hoje eh", b, "e o dia futuro eh", a,)
else:
	print("A entrada", x, "eh invalida")
	

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:41:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("Numero do dia de hoje: "))
y = int(input("Numero de dias depois de hoje: "))
z = (x + y) % 7

if(x == 0):
	b = "domingo"
	if(z == 0):
		a = "domingo"
	elif(z == 1):
		a = "segunda"
	elif(z == 2):
		a = "terca"
	elif(z == 3):
		a = "quarta"
	elif(z == 4):
		a = "quinta"
	elif(z == 5):
		a = "sexta"
	elif(z == 6):
		a = "sabado"
elif(x == 1):
	b = "segunda"
	if(z == 0):
		a = "segunda"
	elif(z == 1):
		a = "terca"
	elif(z == 2):
		a = "quarta"
	elif(z == 3):
		a = "quinta"
	elif(z == 4):
		a = "sexta"
	elif(z == 5):
		a = "sabado"
	elif(z == 6):
		a = "domingo"
elif(x == 2):
	b = "terca"
	if(z == 0):
		a = "terca"
	elif(z == 1):
		a = "quarta"
	elif(z == 2):
		a = "quinta"
	elif(z == 3):
		a = "sexta"
	elif(z == 4):
		a = "sabado"
	elif(z == 5):
		a = "domingo"
	elif(z == 6):
		a = "segunda"
elif(x == 3):
	b = "quarta"
	if(z == 0):
		a = "quarta"
	elif(z == 1):
		a = "quinta"
	elif(z == 2):
		a = "sexta"
	elif(z == 3):
		a = "sabado"
	elif(z == 4):
		a = "domingo"
	elif(z == 5):
		a = "segunda"
	elif(z == 6):
		a = "terca"
elif(x == 4):
	a = "quinta"
	if(z == 0):
		a = "quinta"
	elif(z == 1):
		a = "sexta"
	elif(z == 2):
		a = "sabado"
	elif(z == 3):
		a = "domingo"
	elif(z == 4):
		a = "segunda"
	elif(z == 5):
		a = "terca"
	elif(z == 6):
		a = "quarta"
elif(x == 5):
	a = "sexta"
	if(z == 0):
		a = "sexta"
	elif(z == 1):
		a = "sabado"
	elif(z == 2):
		a = "domingo"
	elif(z == 3):
		a = "segunda"
	elif(z == 4):
		a = "terca"
	elif(z == 5):
		a = "quarta"
	elif(z == 6):
		a = "quinta"
elif(x == 6):
	a = "sabado"
	if(z == 0):
		a = "sabado"
	elif(z == 1):
		a = "domingo"
	elif(z == 2):
		a = "segunda"
	elif(z == 3):
		a = "terca"
	elif(z == 4):
		a = "quarta"
	elif(z == 5):
		a = "quinta"
	elif(z == 6):
		a = "sexta"
	print("Hoje eh", b, "e o dia futuro eh", a,)
else:
	print("A entrada", x, "eh invalida")
	

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:42:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("Numero do dia de hoje: "))
y = int(input("Numero de dias depois de hoje: "))
z = (x + y) % 7

if(x == 0):
	b = "domingo"
		if(z == 0):
			a = "domingo"
		elif(z == 1):
			a = "segunda"
		elif(z == 2):
			a = "terca"
		elif(z == 3):
			a = "quarta"
		elif(z == 4):
			a = "quinta"
		elif(z == 5):
			a = "sexta"
		elif(z == 6):
			a = "sabado"
	elif(x == 1):
		b = "segunda"
		if(z == 0):
			a = "segunda"
		elif(z == 1):
			a = "terca"
		elif(z == 2):
			a = "quarta"
		elif(z == 3):
			a = "quinta"
		elif(z == 4):
			a = "sexta"
		elif(z == 5):
			a = "sabado"
		elif(z == 6):
			a = "domingo"
	elif(x == 2):
		b = "terca"
		if(z == 0):
			a = "terca"
		elif(z == 1):
			a = "quarta"
		elif(z == 2):
			a = "quinta"
		elif(z == 3):
			a = "sexta"
		elif(z == 4):
			a = "sabado"
		elif(z == 5):
			a = "domingo"
		elif(z == 6):
			a = "segunda"
	elif(x == 3):
		b = "quarta"
		if(z == 0):
			a = "quarta"
		elif(z == 1):
			a = "quinta"
		elif(z == 2):
			a = "sexta"
		elif(z == 3):
			a = "sabado"
		elif(z == 4):
			a = "domingo"
		elif(z == 5):
			a = "segunda"
		elif(z == 6):
			a = "terca"
	elif(x == 4):
		a = "quinta"
		if(z == 0):
			a = "quinta"
		elif(z == 1):
			a = "sexta"
		elif(z == 2):
			a = "sabado"
		elif(z == 3):
			a = "domingo"
		elif(z == 4):
			a = "segunda"
		elif(z == 5):
			a = "terca"
		elif(z == 6):
			a = "quarta"
	elif(x == 5):
		a = "sexta"
		if(z == 0):
			a = "sexta"
		elif(z == 1):
			a = "sabado"
		elif(z == 2):
			a = "domingo"
		elif(z == 3):
			a = "segunda"
		elif(z == 4):
			a = "terca"
		elif(z == 5):
			a = "quarta"
		elif(z == 6):
			a = "quinta"
	elif(x == 6):
		a = "sabado"
		if(z == 0):
			a = "sabado"
		elif(z == 1):
			a = "domingo"
		elif(z == 2):
			a = "segunda"
		elif(z == 3):
			a = "terca"
		elif(z == 4):
			a = "quarta"
		elif(z == 5):
			a = "quinta"
		elif(z == 6):
			a = "sexta"
	print("Hoje eh", b, "e o dia futuro eh", a,)
else:
	print("A entrada", x, "eh invalida")
	

-- ERROR:
File "XXXX", line 10
    if(z == 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:42:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("Numero do dia de hoje: "))
y = int(input("Numero de dias depois de hoje: "))
z = (x + y) % 7

if(x == 0):
	b = "domingo"
	if(z == 0):
		a = "domingo"
	elif(z == 1):
		a = "segunda"
	elif(z == 2):
		a = "terca"
	elif(z == 3):
		a = "quarta"
	elif(z == 4):
		a = "quinta"
	elif(z == 5):
		a = "sexta"
	elif(z == 6):
		a = "sabado"
elif(x == 1):
	b = "segunda"
	if(z == 0):
		a = "segunda"
	elif(z == 1):
		a = "terca"
	elif(z == 2):
		a = "quarta"
	elif(z == 3):
		a = "quinta"
	elif(z == 4):
		a = "sexta"
	elif(z == 5):
		a = "sabado"
	elif(z == 6):
		a = "domingo"
elif(x == 2):
	b = "terca"
	if(z == 0):
		a = "terca"
	elif(z == 1):
		a = "quarta"
	elif(z == 2):
		a = "quinta"
	elif(z == 3):
		a = "sexta"
	elif(z == 4):
		a = "sabado"
	elif(z == 5):
		a = "domingo"
	elif(z == 6):
		a = "segunda"
elif(x == 3):
	b = "quarta"
	if(z == 0):
		a = "quarta"
	elif(z == 1):
		a = "quinta"
	elif(z == 2):
		a = "sexta"
	elif(z == 3):
		a = "sabado"
	elif(z == 4):
		a = "domingo"
	elif(z == 5):
		a = "segunda"
	elif(z == 6):
		a = "terca"
elif(x == 4):
	a = "quinta"
	if(z == 0):
		a = "quinta"
	elif(z == 1):
		a = "sexta"
	elif(z == 2):
		a = "sabado"
	elif(z == 3):
		a = "domingo"
	elif(z == 4):
		a = "segunda"
	elif(z == 5):
		a = "terca"
	elif(z == 6):
		a = "quarta"
elif(x == 5):
	a = "sexta"
	if(z == 0):
		a = "sexta"
	elif(z == 1):
		a = "sabado"
	elif(z == 2):
		a = "domingo"
	elif(z == 3):
		a = "segunda"
	elif(z == 4):
		a = "terca"
	elif(z == 5):
		a = "quarta"
	elif(z == 6):
		a = "quinta"
elif(x == 6):
	a = "sabado"
	if(z == 0):
		a = "sabado"
	elif(z == 1):
		a = "domingo"
	elif(z == 2):
		a = "segunda"
	elif(z == 3):
		a = "terca"
	elif(z == 4):
		a = "quarta"
	elif(z == 5):
		a = "quinta"
	elif(z == 6):
		a = "sexta"
	print("Hoje eh", b, "e o dia futuro eh", a,)
else:
	print("A entrada", x, "eh invalida")
	

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:34:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("Numero do dia de hoje: "))
y = int(input("Numero de dias depois de hoje: "))
z = (x + y) % 7
if(x >= 0 and x <= 6):
	if(x >= 0):
		if(x == 0):
			x = "domingo"
		elif(x == 1):
			x = "segunda"
		elif(x == 2):
			x = "terca"
		elif(x == 3):
			x = "quarta"
		elif(x == 4):
			x = "quinta"
		elif(x == 5):
			x = "sexta"
		elif(x == 6):
			x = "sabado"
		if(z == 0):
			y = "domingo"
		elif(z == 1):
			y = "segunda"
		elif(z == 2):
			y = "terca"
		elif(z == 3):
			y = "quarta"
		elif(z == 4):
			y = "quinta"
		elif(z == 5):
			y = "sexta"
		elif(z == 6):
			y = "sabado"
		print("Hoje eh", b, "e o dia futuro eh", a,)
	else:
		print("Hoje eh", x ,"e o dia futuro eh", y)
		

	

-- EXECUTION TIME:
0.239978
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:

-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:35:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("Numero do dia de hoje: "))
y = int(input("Numero de dias depois de hoje: "))
z = (x + y) % 7
if(x >= 0 and x <= 6):
	if(x >= 0):
		if(x == 0):
			x = "domingo"
		elif(x == 1):
			x = "segunda"
		elif(x == 2):
			x = "terca"
		elif(x == 3):
			x = "quarta"
		elif(x == 4):
			x = "quinta"
		elif(x == 5):
			x = "sexta"
		elif(x == 6):
			x = "sabado"
		if(z == 0):
			y = "domingo"
		elif(z == 1):
			y = "segunda"
		elif(z == 2):
			y = "terca"
		elif(z == 3):
			y = "quarta"
		elif(z == 4):
			y = "quinta"
		elif(z == 5):
			y = "sexta"
		elif(z == 6):
			y = "sabado"
		print("Hoje eh", b, "e o dia futuro eh", a,)
	else:
		print("A entrada", x, "eh invalida")
		

	

-- EXECUTION TIME:
0.154478
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:

-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:35:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("Numero do dia de hoje: "))
y = int(input("Numero de dias depois de hoje: "))
z = (x + y) % 7
if(x >= 0 and x <= 6):
	if(x >= 0):
		if(x == 0):
			x = "domingo"
		elif(x == 1):
			x = "segunda"
		elif(x == 2):
			x = "terca"
		elif(x == 3):
			x = "quarta"
		elif(x == 4):
			x = "quinta"
		elif(x == 5):
			x = "sexta"
		elif(x == 6):
			x = "sabado"
		if(z == 0):
			y = "domingo"
		elif(z == 1):
			y = "segunda"
		elif(z == 2):
			y = "terca"
		elif(z == 3):
			y = "quarta"
		elif(z == 4):
			y = "quinta"
		elif(z == 5):
			y = "sexta"
		elif(z == 6):
			y = "sabado"
		print("Hoje eh", x, "e o dia futuro eh", y,)
	else:
		print("A entrada", x, "eh invalida")
		

	

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:35:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("Numero do dia de hoje: "))
y = int(input("Numero de dias depois de hoje: "))
z = (x + y) % 7
if(x >= 0 and x <= 6):
	if(x >= 0):
		if(x == 0):
			x = "domingo"
		elif(x == 1):
			x = "segunda"
		elif(x == 2):
			x = "terca"
		elif(x == 3):
			x = "quarta"
		elif(x == 4):
			x = "quinta"
		elif(x == 5):
			x = "sexta"
		elif(x == 6):
			x = "sabado"
		if(z == 0):
			y = "domingo"
		elif(z == 1):
			y = "segunda"
		elif(z == 2):
			y = "terca"
		elif(z == 3):
			y = "quarta"
		elif(z == 4):
			y = "quinta"
		elif(z == 5):
			y = "sexta"
		elif(z == 6):
			y = "sabado"
		print("Hoje eh", x, "e o dia futuro eh", y,)
	else:
		print("A entrada", x, "eh invalida")
		

	

-- EXECUTION TIME:
0.178557
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:

-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:35:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("Numero do dia de hoje: "))
y = int(input("Numero de dias depois de hoje: "))
z = (x + y) % 7
if(x >= 0 and x <= 6):
	if(x >= 0):
		if(x == 0):
			x = "domingo"
		elif(x == 1):
			x = "segunda"
		elif(x == 2):
			x = "terca"
		elif(x == 3):
			x = "quarta"
		elif(x == 4):
			x = "quinta"
		elif(x == 5):
			x = "sexta"
		elif(x == 6):
			x = "sabado"
		if(z == 0):
			y = "domingo"
		elif(z == 1):
			y = "segunda"
		elif(z == 2):
			y = "terca"
		elif(z == 3):
			y = "quarta"
		elif(z == 4):
			y = "quinta"
		elif(z == 5):
			y = "sexta"
		elif(z == 6):
			y = "sabado"
		print("Hoje eh", x, "e o dia futuro eh", y,)
	else:
		print("A entrada", x, "eh invalida")
		

	

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:36:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("Numero do dia de hoje: "))
y = int(input("Numero de dias depois de hoje: "))
z = (x + y) % 7
if(x >= 0 and x <= 6):
	if(x >= 0):
		if(x == 0):
			x = "domingo"
		elif(x == 1):
			x = "segunda"
		elif(x == 2):
			x = "terca"
		elif(x == 3):
			x = "quarta"
		elif(x == 4):
			x = "quinta"
		elif(x == 5):
			x = "sexta"
		elif(x == 6):
			x = "sabado"
		if(z == 0):
			y = "domingo"
		elif(z == 1):
			y = "segunda"
		elif(z == 2):
			y = "terca"
		elif(z == 3):
			y = "quarta"
		elif(z == 4):
			y = "quinta"
		elif(z == 5):
			y = "sexta"
		elif(z == 6):
			y = "sabado"
		print("Hoje eh", x, "e o dia futuro eh", y,)
	else:
		print("A entrada", x, "eh invalida")
		

	

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:36:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("Numero do dia de hoje: "))
y = int(input("Numero de dias depois de hoje: "))
z = (x + y) % 7
if(x >= 0 and x <= 6):
	if(x >= 0):
		if(x == 0):
			x = "domingo"
		elif(x == 1):
			x = "segunda"
		elif(x == 2):
			x = "terca"
		elif(x == 3):
			x = "quarta"
		elif(x == 4):
			x = "quinta"
		elif(x == 5):
			x = "sexta"
		elif(x == 6):
			x = "sabado"
		if(z == 0):
			y = "domingo"
		elif(z == 1):
			y = "segunda"
		elif(z == 2):
			y = "terca"
		elif(z == 3):
			y = "quarta"
		elif(z == 4):
			y = "quinta"
		elif(z == 5):
			y = "sexta"
		elif(z == 6):
			y = "sabado"
		print("Hoje eh", x, "e o dia futuro eh", y,)
	else:
		print("A entrada", x, "eh invalida")
		

	

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:36:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("Numero do dia de hoje: "))
y = int(input("Numero de dias depois de hoje: "))
z = (x + y) % 7
if(x >= 0 and x <= 6):
	if(x >= 0):
		if(x == 0):
			x = "domingo"
		elif(x == 1):
			x = "segunda"
		elif(x == 2):
			x = "terca"
		elif(x == 3):
			x = "quarta"
		elif(x == 4):
			x = "quinta"
		elif(x == 5):
			x = "sexta"
		elif(x == 6):
			x = "sabado"
		if(z == 0):
			y = "domingo"
		elif(z == 1):
			y = "segunda"
		elif(z == 2):
			y = "terca"
		elif(z == 3):
			y = "quarta"
		elif(z == 4):
			y = "quinta"
		elif(z == 5):
			y = "sexta"
		elif(z == 6):
			y = "sabado"
		print("Hoje eh", x, "e o dia futuro eh", y,)
else:
		print("A entrada", x, "eh invalida")
		

	

-- EXECUTION TIME:
0.133332
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
